# Arrastres-Asistencia-10pa

./: .env.example  README.md  pyproject.toml
.atl/: skill-registry.md
src/: main.py
src/components/: dialogs.py  sidebar.py  stat_card.py
src/config/: claves.py  supabase_client.py
src/database/: add_esquina.sql  auth_service.py  db_service.py  schema.sql
src/utils/: date_helpers.py  excel_generator.py  validators.py
src/views/: arrastre_view.py  bomberos_view.py  dashboard_view.py  informes_view.py  licencias_view.py  login_view.py
