[project]
name = "arrastrecbpa"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.85.3",
    "flet-charts>=0.85.3",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.3",
    "flet-desktop>=0.85.3",
    "flet-web>=0.85.3",
]

[tool.flet]
org = "com.mycompany"
product = "arrastrecbpa"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
